# fastcountvectorizer

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
fastcountvectorizer/: __init__.py  _count_vocab_cy.pyx  fast_count_vectorizer.py
tests/: test_fast_count_vectorizer.py
